File Struture Reorder; add js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
     html, body {
-    background-image: image('./background.jpg');
+    background-image: image('images/background.jpg');
     font-family: 'Merriweather', sans-serif;
     padding: 1em;
     }
@@ -108,6 +108,6 @@
   <div class="half right cf">
     <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
     <input type="saveDate" id="input-date" placeholder="By When?">
-  </div>  
+  </div>
   <input type="submit" value="Submit" id="input-submit">
 </form>
