--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       }
 
 </style>
-<form class="cf">
+<form class="cf" id="form">
   <div class="half left cf">
-    <input type="username" id="input-name" placeholder="Email">
+    <input type="username" id="input-name" placeholder="Username">
     <input type="password" id="input-pass" placeholder="Password">
   </div>
   <div class="half right cf">
