--- a/index.html
+++ b/index.html
@@ -110,5 +110,5 @@
     <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
     <input type="saveDate" id="input-date" placeholder="By When?">
   </div>
-  <input type="submit" value="Submit" id="input-submit">
+  <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
 </form>
