--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+  </head>
   <h1>Treat Yo Self Check</h1>
-  <link rel="stylesheet" type="text/css" href="/style.css">
   <body id="check" />
-<form class="cf" id="form">
-  <div class="half left cf">
-    <input type="username" id="input-name" placeholder="Username">
-    <input type="password" id="input-pass" placeholder="Password">
-  </div>
-  <div class="half right cf">
-    <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
-    <input type="saveDate" id="input-date" placeholder="By When?">
-  </div>
-  <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
-</form>
+  <form class="cf" id="form">
+    <div class="half left cf">
+      <input type="username" id="input-name" placeholder="Username">
+      <input type="password" id="input-pass" placeholder="Password">
+    </div>
+    <div class="half right cf">
+      <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
+      <input type="saveDate" id="input-date" placeholder="By When?">
+    </div>
+    <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
+  </form>
+  <script src="treatCheck.js"></script>
+</html>
