change date prompt

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="half right cf">
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
-      <input type="saveDate" id="input-date" placeholder="By When?">
+      <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
     <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
   </form>
