--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
 
     html, body {
-    background-image: image('C:\Users\Rohan\Desktop\background.jpg');
+    background-image: image('./background.jpg');
     font-family: 'Merriweather', sans-serif;
     padding: 1em;
     }
