--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Elegant Contact Form</h1>
+<h1>Treat Yo Self Check</h1>
 <style>
 
    @import url(http://fonts.googleapis.com/css?family=Merriweather);
