--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
 
     html, body {
-    background-image: image('images/background.jpg');
+    background-image: url('images/background.jpg');
     font-family: 'Merriweather', sans-serif;
     padding: 1em;
     }
