--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     html, body {
     background-image: url('images/background.jpg');
+    background-repeat: no-repeat;
     font-family: 'Merriweather', sans-serif;
     padding: 1em;
     }
