--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
       box-sizing: border-box;
       }
 
-    html, body {
+    body {
     background-image: url('images/background.jpg');
     background-repeat: no-repeat;
+    background-size: 100%, 100%;
     font-family: 'Merriweather', sans-serif;
     padding: 1em;
+    }
+
+    html{
+      font-family: 'Merriweather', sans-serif;
+      padding: 1em;
     }
 
       h1 {
