--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
       h1 {
       text-align: center;
-      color: #a8a8a8;
-      text-shadow: 1px 1px 0 white;
+      color: #3366ff;
+      text-shadow: 1px 1px 0 #e1e1e1;
       }
 
       form {
