--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
       h1 {
       text-align: center;
+      height: 10%;
       color: #3366ff;
       text-shadow: 1px 1px 0 #e1e1e1;
       }
