--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <h1>Treat Yo Self Check</h1>
   <link rel="stylesheet" type="text/css" href="/style.css">
+  <body id="check" />
 <form class="cf" id="form">
   <div class="half left cf">
     <input type="username" id="input-name" placeholder="Username">
