--- a/treat.html
+++ b/treat.html
@@ -2,5 +2,5 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
     <h1>Get Ready To Treat Yo Self!</h1>
     <img src = "/images/treat.gif" />
-    <body id="treat" />
+    <body id="treat" style="align-self: center;" />
 </html>
