Finish deciding treat?

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <script src="treatCheck.js"></script>
   </head>
   <h1>Treat Yo Self Check</h1>
   <body id="check" />
@@ -13,7 +14,6 @@
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
-    <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
+    <input type="submit" value="Submit" id="input-submit" onclick="location.href = treatCheck();">
   </form>
-  <script src="treatCheck.js"></script>
 </html>
