--- a/treat.html
+++ b/treat.html
@@ -1,13 +1,12 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <script>
-    </script>
+    <script src="treatCheck.js"></script>
     <h1>Get Ready To Treat Yo Self!</h1>
     <br />
     <body id="treat">
         <img src = "/images/treat.gif" />
         <div class = "info">
-            <p>If you want to save up    by     , you will need save up    per week. <br>
+            <p>If you want to save up    by     , you will need save up <script>getRate();</script> per week. <br>
             You are saving an avrage of       per week; you deserve a treat.</p>
         </div>
     </body>
