--- a/treat.html
+++ b/treat.html
@@ -1,6 +1,12 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <script>
+    </script>
     <h1>Get Ready To Treat Yo Self!</h1>
+    <div class = "info">
+        <p>If you want to save up    by     , you will need save up    per week. <br>
+        You are saving an avrage of       per week; you deserve a treat.</p>
+    </div>
     <img src = "/images/treat.gif" />
     <body id="treat" />
 </html>
