--- a/treat.html
+++ b/treat.html
@@ -4,7 +4,7 @@
     </script>
     <h1>Get Ready To Treat Yo Self!</h1>
     <img src = "/images/treat.gif" />
-    <div class = "info">
+    <div>
         <p>If you want to save up    by     , you will need save up    per week. <br>
         You are saving an avrage of       per week; you deserve a treat.</p>
     </div>
