--- a/treat.html
+++ b/treat.html
@@ -3,10 +3,11 @@
     <script>
     </script>
     <h1>Get Ready To Treat Yo Self!</h1>
-    <img src = "/images/treat.gif" />
-    <div class = "info">
-        <p>If you want to save up    by     , you will need save up    per week. <br>
-        You are saving an avrage of       per week; you deserve a treat.</p>
-    </div>
-    <body id="treat" />
+    <body id="treat">
+        <img src = "/images/treat.gif" />
+        <div class = "info">
+            <p>If you want to save up    by     , you will need save up    per week. <br>
+            You are saving an avrage of       per week; you deserve a treat.</p>
+        </div>
+    </body>
 </html>
