--- a/noTreat.html
+++ b/noTreat.html
@@ -7,7 +7,7 @@
         <img src = "/images/noTreat.gif" />
         <div class = "info">
             <p>If you want to save up    by     , you will need save up    per week. <br>
-            You are saving an avrage of       per week; you deserve a treat.</p>
+            You are saving an avrage of       per week; you do not deserve a treat.</p>
         </div>
     </body>
 </html>
