--- a/treat.html
+++ b/treat.html
@@ -1,13 +1,13 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <script src="treatCheck.js"></script>
+    <script src="message.js"></script>
     <h1>Get Ready To Treat Yo Self!</h1>
     <br />
     <body id="treat">
         <img src = "/images/treat.gif" />
         <div class = "info">
-            <p>If you want to save up    by     , you will need save up <script>getRate();</script> per week. <br>
-            You are saving an avrage of       per week; you deserve a treat.</p>
+            <p>If you want to save up <script>getGoalM();</script> by<script>getGoalD();</script>, you will need save up <script>getNeed();</script> per week. <br>
+            You are saving an average of <script>getRate();</script> per week; you deserve a treat.</p>
         </div>
     </body>
 </html>
