--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <h1>Treat Yo Self Check</h1>
   <body id="check" />
-  <form class="cf" id="form">
+  <div class="cf" id="form">
     <div class="half left cf">
       <input type="username" id="input-name" placeholder="Username">
       <input type="password" id="input-pass" placeholder="Password">
@@ -14,7 +14,7 @@
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
-    <button type="submit" id="input-submit" onclick="window.location.href=treatCheck()">Submit</button>
-    <button type="submit" id="input-submit" onclick="window.location.href='create.html'">Create</button>
-  </form>
+    <button id="input_submit" onclick="treatCheck();">Submit</button>
+    <button id="input_create" onclick="document.location ='create.html';">Create</button>
+  </div>
 </html>
