--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
     <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
+    <input type="submit" value="Create Account" id="input-submit" href="/create.html">
   </form>
   <script src="treatCheck.js"></script>
 </html>
