--- a/create.html
+++ b/create.html
@@ -3,8 +3,12 @@
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <h1>Create</h1>
-    <input type="username" id="input-name" placeholder="Username">
-    <input type="password" id="input-pass" placeholder="Password">
-    <input type="password" id="input-pass" placeholder="confirmPassword">
-    <input type="balance" id="input-bal" placeholder="Balance"
+    <div class="half left cf">
+        <input type="username" id="input-name" placeholder="Username">
+        <input type="password" id="input-pass" placeholder="Password">
+    </div>
+    <div class="half right cf">
+        <input type="balance" id="input-bal" placeholder="Balance"
+        <input type="password" id="input-pass" placeholder="confirmPassword">
+    </div>
 </html>
