--- a/create.html
+++ b/create.html
@@ -3,12 +3,14 @@
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <h1>Create</h1>
-    <div class="half left cf">
-        <input type="username" id="input-name" placeholder="Username">
-        <input type="password" id="input-pass" placeholder="Password">
-    </div>
-    <div class="half right cf">
-        <input type="balance" id="input-bal" placeholder="Balance"
-        <input type="password" id="input-pass" placeholder="confirmPassword">
-    </div>
+    <form class="cf" id="form">
+        <div class="half left cf">
+            <input type="username" id="input-name" placeholder="Username">
+            <input type="password" id="input-pass" placeholder="Password">
+        </div>
+        <div class="half right cf">
+            <input type="balance" id="input-bal" placeholder="Balance"
+            <input type="password" id="input-pass" placeholder="confirmPassword">
+        </div>
+    </form>
 </html>
