--- a/create.html
+++ b/create.html
@@ -10,7 +10,7 @@
         </div>
         <div class="half right cf">
             <input type="balance" id="input-bal" placeholder="Balance"
-            <input type="password" id="input-pass" placeholder="confirmPassword">
+            <input type="password" id="input-pass" placeholder="Confirm Password">
         </div>
     </form>
 </html>
