--- a/create.html
+++ b/create.html
@@ -9,7 +9,7 @@
             <input type="password" id="input-pass" placeholder="Password">
         </div>
         <div class="half right cf">
-            <input type="balance" id="input-bal" placeholder="Balance"
+            <input type="balance" id="input-bal" placeholder="Balance">
             <input type="confirmPassword" id="input-pass" placeholder="Confirm Password">
         </div>
     </form>
