--- a/create.html
+++ b/create.html
@@ -12,5 +12,6 @@
             <input type="balance" id="input-bal" placeholder="Balance">
             <input type="confirmPassword" id="input-pass" placeholder="Confirm Password">
         </div>
+        <h3>Enter Past diposite/withdraws from last three months.</h3>
     </form>
 </html>
