--- a/treat.html
+++ b/treat.html
@@ -6,8 +6,8 @@
     <body id="treat">
         <img src = "/images/treat.gif" />
         <div class = "info">
-            <p>If you want to save up <script>getGoalM();</script> by<script>getGoalD();</script>, you will need save up <script>getNeed();</script> per week. <br>
-            You are saving an average of <script>getRate();</script> per week; you deserve a treat.</p>
+            <p>If you want to save up <script>document.write(getGoalM());</script> by <script>document.write(getGoalD());</script>, you will need save up <script>document.write(getNeed());</script> per week. <br>
+            You are saving an average of <script>document.write(getRate());</script> per week; you deserve a treat.</p>
         </div>
     </body>
 </html>
