--- a/create.html
+++ b/create.html
@@ -15,4 +15,5 @@
         <br />
         <h3>Enter Past diposite/withdraws from last three months.</h3>
     </form>
+    <body id="create" />
 </html>
