--- a/create.html
+++ b/create.html
@@ -13,7 +13,13 @@
         </div>
         <input type="balance" id="input-bal" placeholder="Balance">
         <br />
-        <h3>Enter Past diposite/withdraws from last three months.</h3>
+        <h3>Enter Past deposit/withdraws from last three months.</h3>
+        <div class="half left cf">
+            <input type="deposit1" id="input-dep" placeholder="Depostie 1">
+        </div>
+        <div class="half right cf">
+            <input type="withdraw1" id="input-with" placeholder="Wtihdraw 1">
+        </div>
     </form>
     <body id="create" />
 </html>
