--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
-    <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
-    <input type="submit" value="Create" id="input-submit" onclick="window.location.href='/create.html'">
+    <button type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
+    <button type="submit" value="Create" id="input-submit" onclick="window.location.href='/create.html'">
   </form>
 </html>
