--- a/create.html
+++ b/create.html
@@ -1,10 +1,17 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/style.css">
+        <script src="js/node.js"></script>
+        <script src="js/r.js"></script>
+        <script src="js/fs.js"></script>
+        <script src="createUser.js"></script>
     </head>
-    <h1>Create</h1>
+    <h1>Sign Up</h1>
     <div class="cf" id="form">
-        <input type="username" id="input-name" placeholder="Username">
+        <button id="input_submit" onclick="startProccess();">Create User</button>
+        <input type="name" id="first-name" placeholder="First Name">
+        <input type="name" id="last-name" placeholder="Last Name">
+        <input type="username" id="user-name" placeholder="Username">
         <div class="half left cf">
             <input type="password" id="input-pass" placeholder="Password">
         </div>
@@ -20,7 +27,6 @@
         <div class="half right cf">
             <input type="withdraw1" id="input-with" placeholder="Wtihdraw 1">
         </div>
-        <button id="input_account" onclick="">Create</button>
     </div>
     <body id="create" />
 </html>
