--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <script type='text/javascript' >
+      localStorage.setItem("AWilliams", "58838bdb1756fc834d8eb7b0");
+      localStorage.setItem("HungerGamez123", "58838dc61756fc834d8eb7c5");
+      localStorage.setItem("BertMacklin", "58838e401756fc834d8eb7cb");
+      localStorage.setItem("THard", "58838fd81756fc834d8eb7df");
+      localStorage.setItem("BenadrylCucumber", "5883905f1756fc834d8eb7e0");
+      localStorage.setItem("PetaBread", "588390b51756fc834d8eb7e1");
+      localStorage.setItem("GenLeia", "588390fd1756fc834d8eb7e2");
+    </script>
     <script src="treatCheck.js"></script>
   </head>
   <h1>Treat Yo Self Check</h1>
