--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
     <button id="input-submit" onclick="treatCheck()">Submit</button>
-    <button id="input-submit" onclick="window.location.href='/create.html'">Create</button>
+    <a href="/create.html"><button id="input-submit" onclick="window.location.href='/create.html'">Create</button></a>
   </form>
 </html>
