--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
-    <button id="input-submit" onclick="treatCheck()">Submit</button>
-    <a href="/create.html"><button id="input-submit">Create</button></a>
+    <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
+    <input type="submit" value="Submit" id="input-submit">
   </form>
 </html>
