--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
     <input type="submit" value="Submit" id="input-submit" onclick="treatCheck()">
-    <input type="submit" value="Submit" id="input-submit">
+    <input type="submit" value="Create Account" id="input-submit" onclick="window.location.href='/create.html'">
   </form>
 </html>
