--- a/create.html
+++ b/create.html
@@ -23,14 +23,14 @@
                     <br><input type="deposit" id="input-depD1" placeholder="Depostie Date 1">
                     <br><input type="deposit" id="input-depA1" placeholder="Depostie Amount 1">
                 </div>
-                <input type="button" value="Add another text input" onClick="addInputD('dynamicInputD');">
+                <input type="button" value="Add another deposit" onClick="addInputD('dynamicInputD');">
             </div>
             <div class="half right cf">
                 <div id="dynamicInputW">
                     <br><input type="withdraw" id="input-withD1" placeholder="Wtihdraw Date 1">
                     <br><input type="withdraw" id="input-withA1" placeholder="Wtihdraw Amount 1">
                 </div>
-                <input type="button" value="Add another text input" onClick="addInputW('dynamicInputW');">
+                <input type="button" value="Add another withdrawl" onClick="addInputW('dynamicInputW');">
             </div>
             <button id="input_account" onclick="">Create</button>
         </div>
