--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <h1>Treat Yo Self Check</h1>
   <body id="check" />
-  <div class="cf" id="form">
+  <form class="cf" id="form">
     <div class="half left cf">
       <input type="username" id="input-name" placeholder="Username">
       <input type="password" id="input-pass" placeholder="Password">
@@ -16,5 +16,5 @@
     </div>
     <button id="input_submit" onclick="treatCheck();">Submit</button>
     <button id="input_create" onclick="document.location ='create.html';">Create</button>
-  </div>
+  </form>
 </html>
