--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     </div>
     <button id="input_submit" onclick="treatCheck();">Submit</button>
     <button id="input_create" onclick="document.location ='create.html';">Create</button>
-  </form>
+  </div>
 </html>
