--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <h1>Treat Yo Self Check</h1>
   <body id="check" />
-  <form class="cf" id="form">
+  <div class="cf" id="form">
     <div class="half left cf">
       <input type="username" id="input-name" placeholder="Username">
       <input type="password" id="input-pass" placeholder="Password">
