--- a/create.html
+++ b/create.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <h1>Create</h1>
-    <form class="cf" id="form">
+    <div class="cf" id="form">
         <input type="username" id="input-name" placeholder="Username">
         <div class="half left cf">
             <input type="password" id="input-pass" placeholder="Password">
@@ -20,6 +20,6 @@
         <div class="half right cf">
             <input type="withdraw1" id="input-with" placeholder="Wtihdraw 1">
         </div>
-    </form>
+    </div>
     <body id="create" />
 </html>
