--- a/create.html
+++ b/create.html
@@ -20,6 +20,7 @@
         <div class="half right cf">
             <input type="withdraw1" id="input-with" placeholder="Wtihdraw 1">
         </div>
+        <button id="input_account" onclick="">Create</button>
     </div>
     <body id="create" />
 </html>
