--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
     <button id="input_submit" onclick="treatCheck();">Submit</button>
     <button id="input_create" onclick="document.location ='create.html';">Create</button>
   </div>
+  <button class="back" onclick="window.location.href='/index.html'">Back</button>
 </html>
