--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="treatCheck.js"></script>
   </head>
   <h1>Treat Yo Self Check</h1>
-  <body id="check" />
+  <body id="check">
   <div class="cf" id="form">
     <div class="half left cf">
       <input type="username" id="input-name" placeholder="Username">
@@ -17,5 +17,6 @@
     <button id="input_submit" onclick="treatCheck();">Submit</button>
     <button id="input_create" onclick="document.location ='create.html';">Create</button>
   </div>
+  </body>
   <button class="back" onclick="window.location.href='/index.html'">Back</button>
 </html>
