--- a/create.html
+++ b/create.html
@@ -23,4 +23,5 @@
         <button id="input_account" onclick="">Create</button>
     </div>
     <body id="create" />
+    <button class="back" onclick="window.location.href='/index.html'">Back</button>
 </html>
