Small changes and spelling

--- a/create.html
+++ b/create.html
@@ -20,18 +20,18 @@
             </div>
             <input type="balance" id="input-bal" placeholder="Balance">
             <br />
-            <h3>Enter Past deposit/withdraws from last three months.</h3>
+            <h3>Enter Past deposit/withdraws from last three weeks.</h3>
             <div class="half left cf">
                 <div id="dynamicInputD">
-                    <br><input type="deposit" id="input-depD1" placeholder="Depostie Date 1 (YYYY-MM-DD)">
-                    <br><input type="deposit" id="input-depA1" placeholder="Depostie Amount 1">
+                    <br><input type="deposit" id="input-depD1" placeholder="Deposit Date 1 (YYYY-MM-DD)">
+                    <br><input type="deposit" id="input-depA1" placeholder="Deposit Amount 1">
                 </div>
                 <input type="button" value="Add another deposit" onClick="addInputD('dynamicInputD');">
             </div>
             <div class="half right cf">
                 <div id="dynamicInputW">
-                    <br><input type="withdraw" id="input-withD1" placeholder="Wtihdraw Date 1 (YYYY-MM-DD)">
-                    <br><input type="withdraw" id="input-withA1" placeholder="Wtihdraw Amount 1">
+                    <br><input type="withdraw" id="input-withD1" placeholder="Wtihdrawl Date 1 (YYYY-MM-DD)">
+                    <br><input type="withdraw" id="input-withA1" placeholder="Wtihdrawl Amount 1">
                 </div>
                 <input type="button" value="Add another withdrawl" onClick="addInputW('dynamicInputW');">
             </div>
