--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <input type="saveMoney" id="input-money" placeholder="How much money do you want saved?">
       <input type="saveDate" id="input-date" placeholder="By When?(MM/DD/YYYY)">
     </div>
-    <button id="input_submit" onclick="treatCheck();">Submit</button>
-    <button id="input_create" onclick="document.location ='create.html';">Create</button>
+    <button id="input_submit" onclick="treatCheck();">Treat?</button>
+    <button id="input_create" onclick="document.location ='create.html';">Create New User</button>
   </div>
   </body>
 </html>
