--- a/noTreat.html
+++ b/noTreat.html
@@ -9,7 +9,7 @@
         <img src = "/images/noTreat.gif" />
         <div class = "info">
           <p>If you want to save up $<script>document.write(getGoalM());</script> by <script>document.write(getGoalD());</script>, you will need save up $<script>document.write(getNeed());</script> per week. <br>
-          You are saving an average of $<script>document.write(getRate());</script> per week; you do not deserve a treat.</p>
+          You have $<script>document.write(getBal());</script> saved and are saving an average of $<script>document.write(getRate());</script> per week; you do not deserve a treat.</p>
         </div>
         <button class="back" onclick="window.location.href='/index.html'">Back</button>
     </body>
