--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link ref="icon" href="/images/icon.png">
+    <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="treatCheck.js"></script>
   </head>
