--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <link rel="icon" href="/images/icon.png">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="icon" href="/images/icon.png" />
+    <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="treatCheck.js"></script>
+    <title>Check Yo Treat</title>
   </head>
   <h1>Treat Yo Self Check</h1>
   <body id="check">
