--- a/noTreat.html
+++ b/noTreat.html
@@ -1,6 +1,7 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="message.js"></script>
+    <title>No Treat</title>
     <h1>No Days of Treating for You!</h1>
     <br />
     <body id="noTreat">
