--- a/treat.html
+++ b/treat.html
@@ -1,6 +1,7 @@
 <html>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="message.js"></script>
+    <title>Treat Yo Self</title>
     <h1>Get Ready To Treat Yo Self!</h1>
     <br />
     <body id="treat">
