--- a/create.html
+++ b/create.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/style.css">
+        <title>Create</title>
     </head>
     <body id="create">
         <h1>Create</h1>
