--- a/create.html
+++ b/create.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="icon" href="/images/icon.ico" type="image/ico" />
         <link rel="stylesheet" type="text/css" href="/style.css">
         <title>Create</title>
     </head>
