--- a/noTreat.html
+++ b/noTreat.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="icon" href="/images/icon.ico" type="image/ico" />
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="message.js"></script>
     <title>No Treat</title>
