--- a/create.html
+++ b/create.html
@@ -12,16 +12,18 @@
                 <input type="password" id="input-pass" placeholder="Password">
             </div>
             <div class="half right cf">
-                <input type="confirmPassword" id="input-pass" placeholder="Confirm Password">
+                <input type="confirmPassword" id="input-cPass" placeholder="Confirm Password">
             </div>
             <input type="balance" id="input-bal" placeholder="Balance">
             <br />
             <h3>Enter Past deposit/withdraws from last three months.</h3>
             <div class="half left cf">
-                <input type="deposit1" id="input-dep" placeholder="Depostie 1">
+                <input type="deposit" id="input-depD" placeholder="Depostie Date">
+                <input type="deposit" id="input-depA" placeholder="Depostie Amount">
             </div>
             <div class="half right cf">
-                <input type="withdraw1" id="input-with" placeholder="Wtihdraw 1">
+                <input type="withdraw" id="input-withD" placeholder="Wtihdraw Date">
+                <input type="withdraw" id="input-withA" placeholder="Wtihdraw Amount">
             </div>
             <button id="input_account" onclick="">Create</button>
         </div>
